cursor animation added

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -39,14 +39,16 @@
 
 @import 'header';
 @import 'main';
-@import 'login';
-@import 'banner';
-@import 'game';
-@import 'home';
+@import 'products';
+@import 'cursor';
+// @import 'login';
+// @import 'banner';
+// @import 'game';
+// @import 'home';
 @import 'cards';
-@import 'collage';
-@import 'hero-slider';
-@import 'gsap-slider';
-@import 'essentials-slider';
-@import 'intro-slider';
+// @import 'collage';
+// @import 'hero-slider';
+// @import 'gsap-slider';
+// @import 'essentials-slider';
+// @import 'intro-slider';
 @import 'footer';
