--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -10,7 +10,7 @@
 
 * {
     // font-family: 'DINP-R';
-    // font-family: 'Quicksand', sans-serif !important;
+    font-family: 'Quicksand', sans-serif !important;
 }
 
 h1,
