--- a/src/scss/gsap-slider.scss
+++ b/src/scss/gsap-slider.scss
@@ -245,11 +245,7 @@
     }
 }
 
-@media (min-width: 1440px) {
-    .container {
-        width: 1400px;
-    }
-}
+@media (min-width: 1440px) {}
 
 #gs-slideshow {
     position: relative;
