--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,6 +46,8 @@
 // @import 'game';
 // @import 'home';
 @import 'cards';
+@import 'face-eyes';
+@import 'morph';
 // @import 'collage';
 // @import 'hero-slider';
 // @import 'gsap-slider';
