--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -78,6 +78,83 @@
     }
 }
 
+// 3D CARD animation
+.card-wrapper {
+    transform-style: preserve-3d;
+    margin: 0 auto;
+    width: 250px;
+    height: 400px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.card-wrapper:after {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: -1;
+    display: block;
+    content: '';
+    height: 22px;
+    width: 100%;
+    background: url('http://www.kikk.be/2015/files/templates/kikk2015/public/assets/images/floating-card-shadow.png') no-repeat;
+    background-size: 100%;
+}
+
+.bloc {
+    height: 100%;
+    width: 100%;
+    // background: url(https://desktopography.net/wp-content/uploads/bfi_thumb/ALONE-34re7d3h27texnipm6f0u8.jpg) no-repeat center top;
+    position: relative;
+    border-radius: 12px;
+    background: rgb(0, 0, 161);
+    box-shadow: 1px, 2px;
+    // box-shadow: -19px 20px 20px 0px #898989;
+}
+
+.content {
+    transform: translateZ(80px) scale(1);
+    -webkit-transform: translateZ(80px) scale(1);
+    height: 360px;
+    width: 210px;
+    position: absolute;
+    margin: auto;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    padding: 20px;
+    color: #fff;
+    z-index: 3;
+    p {
+        color: #fff;
+    }
+}
+
+.content2 {
+    transform: translateZ(40px) scale(1);
+    -webkit-transform: translateZ(40px) scale(1);
+    background: #7723ff;
+    opacity: 0.4;
+    left: -80px;
+    padding: 0;
+    z-index: 2;
+    display: none;
+}
+
+.content p:nth-of-type(1) {
+    font-size: 36px;
+}
+
+.content p:nth-of-type(2) {
+    position: absolute;
+    bottom: 0px;
+}
+
 .section-wave-container {
     height: 100px;
     position: absolute;
