--- a/src/scss/cursor.scss
+++ b/src/scss/cursor.scss
@@ -222,7 +222,7 @@ body strong.cursor-circle span.word span.char:before {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #08350e;
+    color: #ff8800;
     transform: translateY(100%);
     transition: 0.3s ease-in-out;
 }
