--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -30,7 +30,7 @@
  }
  
  .section__card {
-     background-color: coral;
+     background-color: rgb(234, 0, 255);
      border-radius: 30px;
      width: 100%;
      height: 100%;
