--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -192,4 +192,25 @@
     .cards {
         flex-direction: column;
     }
+    .card-wrapper {
+        transform-style: preserve-3d;
+        margin: 0 auto;
+        width: 250px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        .bloc {
+            width: 100%;
+            height: auto;
+            height: 100%;
+            position: relative;
+            border-radius: 12px;
+            background: rgb(255, 200, 0);
+            box-shadow: 1px, 2px;
+        }
+    }
 }
