--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
         position: relative;
         max-width: 1080px;
         margin: 0 auto;
+        border-bottom: 1px solid #ccc;
         &.full {
             max-width: 100%;
             width: 100%;
