--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -20,6 +20,14 @@
      //  color: var(--color-black);
      //  background: var(--color-white);
      //  box-shadow: var(--shadow-large);
+     position: fixed;
+     width: 100%;
+     z-index: 99;
+     top: 0px;
+     left: 0;
+     right: 0;
+     background: #fff;
+     box-shadow: 0px 4px 10px rgb(0 0 0 / 10%);
      .wrapper {
          display: flex;
          flex-direction: row;
@@ -51,12 +59,26 @@
                          text-transform: uppercase;
                          text-rendering: optimizeLegibility;
                          transition: all 0.35s ease-in-out;
-                         padding: 0.5rem 1rem;
+                         padding: 1.5rem 1rem;
                          display: inline-block;
-                     }
-                     &.active {
-                         .menu-link {
-                             background-color: aqua;
+                         &:hover {
+                             background: rgb(192, 192, 192);
+                         }
+                         &.active {
+                             position: relative;
+                             background-color: rgb(210, 210, 210);
+                             &::after {
+                                 content: '';
+                                 display: block;
+                                 width: 100%;
+                                 height: 4px;
+                                 position: absolute;
+                                 background-color: rgb(255, 174, 0);
+                                 z-index: 1;
+                                 bottom: 0px;
+                                 left: 0px;
+                                 right: 0px;
+                             }
                          }
                      }
                  }
