--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -20,33 +20,6 @@
  //     max-width: 960px;
  //     margin: 0 auto;
  // }
- .section__cards {
-     display: flex;
-     justify-content: flex-start;
-     align-items: center;
-     width: 100%;
-     height: 100%;
-     flex-shrink: 0;
- }
- 
- .section__card {
-     background-color: rgb(234, 0, 255);
-     border-radius: 30px;
-     width: 100%;
-     height: 100%;
-     display: flex;
-     align-items: center;
-     flex-shrink: 0;
-     justify-content: center;
-     &+& {
-         margin-left: 5vw;
-     }
- }
- 
- .section__title {
-     color: #1b2b34;
- }
- 
  .cluster {
      position: relative;
      width: 100%;
@@ -297,5 +270,36 @@
      .captionBurrowing {
          float: right;
          top: 0;
+     }
+ }
+ 
+ .section__cards {
+     display: flex;
+     justify-content: flex-start;
+     align-items: center;
+     width: 100%;
+     height: 100%;
+     flex-shrink: 0;
+     .section__card {
+         background: rgb(234, 0, 255);
+         border-radius: 30px;
+         width: 100%;
+         height: 100%;
+         display: flex;
+         align-items: center;
+         flex-shrink: 0;
+         justify-content: center;
+         &+& {
+             margin-left: 5vw;
+         }
+         .section__title {
+             color: #1b2b34;
+         }
+     }
+     @media only screen and (max-width: $mobile-width) {
+         .section__card {
+             background: #ffc131;
+             min-height: 50vh;
+         }
      }
  }
